--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="file.js" defer></script>
     <title>Calculator</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.2.0/math.min.js"></script>
   </head>
   <body>
     <div id="calculator">
       <input type="text" id="display" readonly>
       <div id="keys">
-        <button class="operator-btn" onclick="appendToDisplay('+')">+</button>
-        <button onclick="appendToDisplay('7')">7</button>
-        <button onclick="appendToDisplay('8')">8</button>
-        <button onclick="appendToDisplay('9')">9</button>
-        <button class="operator-btn" onclick="appendToDisplay('-')">-</button>
-        <button onclick="appendToDisplay('4')">4</button>
-        <button onclick="appendToDisplay('5')">5</button>
-        <button onclick="appendToDisplay('6')">6</button>
-        <button class="operator-btn" onclick="appendToDisplay('*')">*</button>
-        <button onclick="appendToDisplay('1')">1</button>
-        <button onclick="appendToDisplay('2')">2</button>
-        <button onclick="appendToDisplay('3')">3</button>
-        <button class="operator-btn" onclick="appendToDisplay('/')">/</button>
-        <button onclick="appendToDisplay('0')">0</button>
-        <button onclick="appendToDisplay('.')">.</button>
-        <button onclick="calculate()">=</button>
-        <button class="operator-btn" onclick="clearDisplay()">C</button>
+        <button class="operator-btn button" onclick="appendToDisplay('+')">+</button>
+        <button class="button" onclick="appendToDisplay('7')">7</button>
+        <button class="button" onclick="appendToDisplay('8')">8</button>
+        <button class="button" onclick="appendToDisplay('9')">9</button>
+        <button  class="operator-btn button" onclick="appendToDisplay('-')">-</button>
+        <button class="button" onclick="appendToDisplay('4')">4</button>
+        <button class="button" onclick="appendToDisplay('5')">5</button>
+        <button class="button" onclick="appendToDisplay('6')">6</button>
+        <button  class="operator-btn button" onclick="appendToDisplay('*')">*</button>
+        <button class="button" onclick="appendToDisplay('1')">1</button>
+        <button class="button" onclick="appendToDisplay('2')">2</button>
+        <button class="button" onclick="appendToDisplay('3')">3</button>
+        <button  class="operator-btn button" onclick="appendToDisplay('/')">/</button>
+        <button class="button" onclick="appendToDisplay('0')">0</button>
+        <button class="button" onclick="appendToDisplay('.')">.</button>
+        <button class="button" onclick="calculate()">=</button>
+        <button class="operator-btn button" onclick="clearDisplay()">C</button>
       </div>
     </div>
   </body>
