--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button class="button" onclick="appendToDisplay('.')">.</button>
         <button class="button" onclick="calculate()">=</button>
         <button class="operator-btn button" onclick="clearDisplay()">C</button>
+        <button class="operator-btn button" id="backspace">←</button>
       </div>
     </div>
   </body>
